--- a/sign-up.css
+++ b/sign-up.css
@@ -1,3 +1,11 @@
+body {
+    background: url(background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .header{
     margin: 0;
     position: absolute;
