--- a/sign-up.css
+++ b/sign-up.css
@@ -12,24 +12,25 @@ body {
     top: 27%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color:rgb(38, 6, 97);
 }
 
 .sign-up{
+    height: 70%;
+    width: 30%;
+    background-color: rgba(237, 237, 237, 0.7);
     margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 15px;
-    
-    padding: 10px;
-    border-color: rgb(140, 211, 245);
-    background:rgb(215, 242, 255)
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
 }
 
-#username, #email{
+#username, #password{
     margin-top:10px;
 }
