--- a/budget/budget.css
+++ b/budget/budget.css
@@ -3,8 +3,15 @@
 ---------- */
 
 *{
-    padding: 0;
+    padding: 0px;
     margin: 0;
+    background-color: rgb(230, 230, 230);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    margin: 5px;
+    padding: 5px;
 }
 
 .flex-row{
@@ -25,12 +32,13 @@
     padding-left: 2px;
     width: 95%;
     height: 25px;
+    background-color: white;
 }
 
 button{
     border: 2px solid;
     border-radius: 5px;
-    background-color: white;
+    background-color:rgb(230, 230, 230);
     height: 30px;
     padding: 5px;
     margin-top: 5px;
@@ -54,10 +62,10 @@ button{
     padding: 5px;
 }
 
-#budgetUi, #btn-budget-caulcate{
+#budgetUi, #btn-budget-calculate{
     border-color: green;
+    color: green;
 }
-
 
 /* Expenses */
 
@@ -68,19 +76,48 @@ button{
     padding: 10px;
 }
 
+#expenseNameUi, #expenseAmountUi, #btnAddExpense{
+    border-color: red;
+    color: red;
+}
 
 /* ----------
     Info Display
 ---------- */
 
 #info-display{
-    align-self: flex-end;
+    align-self: flex-start;
     width: 60%;
-    background-color: pink;
 }
 
-#showcases 
+.icon{
+    color: slateblue; 
+    font-size: 60px;
+}
 
+.showcase-box{
+    margin-left: 40px;
+    width: 20%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    padding-top: 10px;
+    align-items: center;
+}
+
+.showcase-box p{
+    font-size: 25px;
+}
 #expense-list{
+    margin-left: 40px;
     width: 60%;
+}
+
+#expense-list p{
+    margin-right: 100px;
+}
+
+.expenseItem{
+    display: flex;
 }
